# TippingPoint

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: PyPI.yaml  PyPI.yml  test.yaml
docs/: api.rst  conf.py  index.rst  whitepaper.md  whitepaper.tex
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: api.doctree  environment.pickle  index.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/tippingpoint/: curve.html  math.html  models.html  portfolio.html  viz.html
docs/_build/html/_sources/: api.rst.txt  index.rst.txt
docs/whitepaper/: generate_wp_images.py  whitepaper.md  whitepaper.tex
src/tippingpoint/: __init__.py  cli.py  curve.py  dashboard.py  frontier.py  math.py  models.py  portfolio.py  viz.py
src/tippingpoint/fitting/: bayesian.py  gradient.py
tests/: test_adstock.py  test_bayesian.py  test_cli.py  test_curve.py  test_frontier.py  test_models.py  test_portfolio.py  test_tipping_points.py
tippingpoint/: __init__.py  curve.py
