[project]
name = "tippingpt"
description = "Given impression and KPI data, determine the tipping points associated with maximizing success rate of marketing"
version = "0.0.2"
readme = "README.md"
keywords = [
    "tipping point",
    "marketing",
    "utility",
    "cli" 
]

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha", 
]
authors = [
    { name = "Ryan Duecker", email = "ryanduecker@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "tinygrad",
    "matplotlib"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff",
    "pre-commit",
    "hatch",
]
lint = ["ruff","pylint"]
test = ["pytest"]
docs = [
    "sphinx>=6.0",
]

[project.scripts]
tipp = "tippingpoint.cli:main"

[tool.hatch.metadata]
vcs = true

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tippingpoint"]
exclude = [
    "/.github",
    "/tests",
    "/.vscode",
]

pre-install-commands = ["pip install --upgrade pip",]

[tool.hatch.envs.default.scripts]
# Run tests with pytest
test = "pytest {args}"
# Run tests with coverage
cov = "pytest --cov={package} --no-cov-on-fail {args}"
# Run ruff linter/formatter
lint = "ruff check {package} {args}"
format = "ruff format {package} {args}"
# Build the package
build = "hatch build"
# Clean build artifacts
clean = "hatch clean"

[tool.ruff]
preview = true
target-version = "py311"
line-length = 250
indent-width = 2
exclude = [
  ".git/",
  "docs/",
]

[tool.ruff.lint]
select = [
  "F",  # Pyflakes
  "W6",
  "E71",
  "E72",
  "E112",   # no-indented-block
  "E113",   # unexpected-indentation
  # "E124",
  "E203",   # whitespace-before-punctuation
  "E272",   # multiple-spaces-before-keyword
  "E275",   # missing-whitespace-after-keyword
  "E303",   # too-many-blank-lines
  "E304",   # blank-line-after-decorator
  "E501",   # line-too-long
  # "E502",
  "E702",   # multiple-statements-on-one-line-semicolon
  "E703",   # useless-semicolon
  "E731",   # lambda-assignment
  "W191",   # tab-indentation
  "W291",   # trailing-whitespace
  "W293",   # blank-line-with-whitespace
  "UP039",  # unnecessary-class-parentheses
  "C416",   # unnecessary-comprehension
  "RET506", # superfluous-else-raise
  "RET507", # superfluous-else-continue
  "A",      # builtin-variable-shadowing, builtin-argument-shadowing, builtin-attribute-shadowing
  "FURB110",# if-exp-instead-of-or-operator
  "RUF018", # assignment-in-assert
]

[tool.ruff.format]
exclude = ["*"]

[tool.coverage.run]
branch = true
source = ["tippingpoint"]

